--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -5,4 +5,6 @@ html
     = csrf_meta_tags
     = stylesheet_link_tag 'application', media: 'all'
   body
+    p class="notice"= notice
+    p class="alert"= alert
     = yield
