--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -3,7 +3,8 @@ html
   head
     title BasicSns
     = csrf_meta_tags
-    = stylesheet_link_tag 'application', media: 'all'
+    = stylesheet_pack_tag 'application', media: 'all'
+    = javascript_pack_tag 'application'
   body
     p class="notice"= notice
     p class="alert"= alert
